--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ object-position:center;
 }
 .img-description {
 max-height: 100vh;
-
+min-width: 100%;
 
 }
 
@@ -274,3 +274,18 @@ height:min-content;
 
 class="banner-img img-fluid w-100"
 
+  <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="m-4">
+          <img src="img/nizuc-02-m25/002-nizuc_2 - render.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/nizuc-02-m25/002-nizuc_3 - render.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/nizuc-02-m25/002-nizuc_4 - render.jpg" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
