correccion banner home, portada naudir1/2

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 header .navbar .navbar-brand {
   padding: 38px 0 18px 0;
-  padding-bottom: 14vh;
+  padding-bottom: 40px;
 }
 header .navbar .nav-link {
   padding-left: 20px;
