--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,31 @@ body {
 
 
 }
+
+
+
+header {
+   position:fixed;
+   z-index:1000;
+   background-color: rgba(255, 255, 255, 0.747);
+   top:0;
+max-height: 100px;
+   width:100%;
+   align-items: center;
+
+}
+
+header img {
+  width: 200px;
+}
 header .navbar .navbar-brand {
-  padding: 38px 0 18px 0;
+  padding: 18px ;
   padding-bottom: 40px;
+ 
 }
 header .navbar .nav-link {
-  padding-left: 20px;
+  margin-bottom: 20px;
+ 
   padding-right: 20px;
   margin-right: 72px;
 }
@@ -16,12 +35,19 @@ header .navbar .nav-link.active {
   font-weight: 600;
   border-bottom: 2px solid #000;
 }
+
+main {
+  padding-top: 100px;
+}
+
 .container-fluid {
   padding-right: 0;
   padding-left: 0;
+
 }
 
 .row {
+
   margin-right: 0;
   margin-left: 0;
 }
@@ -31,15 +57,19 @@ header .navbar .nav-link.active {
   padding-left: 0;
 }
 
+#catalogBarAll{
+  margin-right: 35px;
+}
 
 .carousel-item{
+
 max-height: 100vh;
 object-fit:cover;
 object-position:center;
 }
 .carousel-item img{
  max-height: 100vh; 
-object-fit: cover;
+object-fit:cover;
 object-position: center;
 }
 .main-slider .carousel-item h5 {
@@ -77,15 +107,16 @@ object-position: center;
   font-style: normal;
   font-weight: 400;
 }
+
+
 .grid-item {
+
   position: relative;
-  min-height: 150px;
   filter: grayscale(1);
   transition: filter 0.3s;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
 }
 .grid-item:hover {
   filter: grayscale(0);
@@ -148,20 +179,30 @@ section.contact {
   border: none;
 }
 .catalog {
-  padding: 105px 80px 0;
+  padding:  130px 0;  
+
+}
+#catalogBarAll{
+  padding-top: 120px;
 }
 .catalog h4 {
+  
   color: #525252;
   font-size: 36px;
   font-weight: 600;
   text-transform: uppercase;
+  display: none;
+}
+.catalog .nav {
+  padding-right: 20vh;
+  width: 100%;
 }
 .catalog .nav .nav-link {
   color: rgba(15, 15, 15, 0.4);
   font-size: 26px;
   font-weight: 600;
   text-transform: uppercase;
-  margin: 0 25px;
+  margin: 0 10px;
 }
 .catalog .nav .nav-link.active {
   color: #525252;
@@ -207,12 +248,7 @@ min-width: 100%;
 }
 
 .proyect-details h4 {
-  background: rgb(51, 51, 51);
-  background: linear-gradient(
-    180deg,
-    rgba(51, 51, 51, 0.6979166666666667) 70%,
-    rgba(255, 255, 255, 0) 100%
-  );
+
   color: #fff;
   font-size: 36px;
   font-weight: 600;
@@ -275,10 +311,69 @@ justify-content: center;
 padding-top: 20px;
 }
 
+.gallery-img-container {
+  position: relative;
 
-@media (min-width: 768px) {
+  width: 100%;
+  height: 200px;
+}
+
+.gallery-img {
+  object-fit: cover;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  background: rgba(245, 245, 245, 0.5);
+}
+
+
+#modalImage{
+  max-height: 90vh;
+  max-width:min-content;
+}
+ .modal-dialog{
+  max-height: 100vh;
+  max-width:max-content;
+
+ }
+
+
+
+
+.mask {
+  position: absolute;
+  bottom: 0;
+ left: 1;
+
+  width: 90%;
+  height: 30%;
+  background: linear-gradient(to right, rgba(248, 247, 247, 0.952), rgba(248, 247, 247, 0));
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.bg-image:hover .mask {
+  opacity: 1;
+  
+}
+
+.mask .d-flex {
+  height: 100%;
+ 
+}
+
+
+
+
+
+
+@media (min-width: 300px) {
   .grid-item {
-    min-height: 300px; 
+    min-height: 250px; 
+    width: auto; 
   }
 
  
